<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:background="@android:color/darker_gray"
        android:gravity="center"
        android:text="@string/palindrom_sjekker"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/editText1"
        android:layout_width="212dp"
        android:layout_height="51dp"
        android:gravity="center"
        android:hint="@string/skriv_inn_ord_her"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/sjekk"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.669" />

    <Button
        android:id="@+id/sjekk"
        android:layout_width="171dp"
        android:layout_height="54dp"
        android:backgroundTint="@color/light_grey"
        android:gravity="center"
        android:text="@string/sjekk"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.29" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="251dp"
        android:layout_height="200dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.657" />

    <Button
        android:id="@+id/videre1"
        android:layout_width="match_parent"
        android:layout_height="70sp"
        android:gravity="center"
        android:backgroundTint="@color/light_blue"
        android:text="@string/g_videre"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="0dp" />


</androidx.constraintlayout.widget.ConstraintLayout>