<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/white"
    tools:context=".QuizActivity">

    <TextView
        android:layout="@+id/quiz"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:background="@android:color/darker_gray"
        android:gravity="center"
        android:text="@string/quiz"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="387dp"
        android:layout_height="204dp"
        android:background="@drawable/textview_border"
        android:gravity="center"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.153" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="302dp"
        android:layout_height="131dp"
        android:gravity="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.731" />


    <Button
        android:id="@+id/riktig"
        android:layout_width="112dp"
        android:layout_height="64dp"
        android:layout_marginTop="74dp"
        android:layout_marginBottom="68dp"
        android:backgroundTint="@color/green"
        android:text="@string/riktig"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.27"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.542" />

    <Button
        android:id="@+id/galt"
        android:layout_width="112dp"
        android:layout_height="64dp"
        android:text="@string/galt"
        android:backgroundTint="@color/red"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.749"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.521" />

    <Button
        android:id="@+id/restart"
        android:layout_width="match_parent"
        android:layout_height="70sp"
        android:gravity="center"
        android:backgroundTint="@color/light_blue"
        android:text="@string/restart_quiz"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="0dp" />

</androidx.constraintlayout.widget.ConstraintLayout>